--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <div aling="center">
             <h3 aling="center"><font color="blue"><u>Tema 1: Introducción al lenguaje de marcas</u></font></h3>
                 <ul>
-                    <li><a href="https://github.com/Xentauross/HTML/blob/main/Tema%201/XML/Ejercicio1.xml">Ejercicio 1</a>
-                    <li><a href="https://github.com/Xentauross/HTML/blob/main/Tema%201/XML/Ejercicio2.xml">Ejercicio 2</a>
+                    <li><a href="https://github.com/Xentauross/HTML/XML/Ejercicio1.xml">Ejercicio 1</a>
+                    <li><a href="https://github.com/Xentauross/HTML/XML/jercicio2.xml">Ejercicio 2</a>
                 </ul>
-        <hr>
+        <br>
         </div>
         <div aling="center">
             <h3 aling="center"><font color="blue"><u>Tema 2: HTML</u></font></h3>
                 <ul> 
-                    <li><a href="https://github.com/Xentauross/HTML/blob/main/Tema%202/EjemploListas.html">Ejercicio Listas</a>
-                    <li><a href="https://github.com/Xentauross/HTML/blob/main/Tema%202/EjemploHorario.html">Ejercicio Horario</a>
+                    <li><a href="https://github.com/Xentauross/HTML/EjemploListas.html">Ejercicio Listas</a>
+                    <li><a href="https://github.com/Xentauross/HTML/EjemploHorario.html">Ejercicio Horario</a>
                 </ul>
         </div>
     </body>
