--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div aling="center">
             <h3 aling="center"><font color="blue"><u>Tema 2: HTML</u></font></h3>
                 <ul> 
-                    <li><a href="Tema 2/EjemploListas.html">Ejercicio Listas</a>
-                    <li><a href="Tema 2/EjemploHorario.html">Ejercicio Horario</a>
+                    <li><a href="HTML/Tema 2/EjemploListas.html">Ejercicio Listas</a>
+                    <li><a href="HTML/Tema 2/EjemploHorario.html">Ejercicio Horario</a>
                 </ul>
         </div>
     </body>
