--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <div aling="center">
             <h3 aling="center"><font color="blue"><u>Tema 1: Introducción al lenguaje de marcas</u></font></h3>
                 <ul>
-                    <li><a href="HTML/Tema 1/Ejercicio1.xml">Ejercicio 1</a>
-                    <li><a href="HTML/Tema 1/Ejercicio2.xml">Ejercicio 2</a>
+                    <li><a href="/HTML/Tema 1/Ejercicio1.xml">Ejercicio 1</a>
+                    <li><a href="/HTML/Tema 1/Ejercicio2.xml">Ejercicio 2</a>
                 </ul>
         <br>
         </div>
         <div aling="center">
             <h3 aling="center"><font color="blue"><u>Tema 2: HTML</u></font></h3>
                 <ul> 
-                    <li><a href="HTML/Tema 2/EjemploListas.html">Ejercicio Listas</a>
-                    <li><a href="HTML/Tema 2/EjemploHorario.html">Ejercicio Horario</a>
+                    <li><a href="/HTML/Tema 2/EjemploListas.html">Ejercicio Listas</a>
+                    <li><a href="/HTML/Tema 2/EjemploHorario.html">Ejercicio Horario</a>
                 </ul>
         </div>
     </body>
