--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div aling="center">
             <h3 aling="center"><font color="blue"><u>Tema 1: Introducción al lenguaje de marcas</u></font></h3>
                 <ul>
-                    <li><a target="_blank" href="/HTML/Tema 1/Ejercicio1.xml">Ejercicio 1</a>
-                    <li><a target="_blank" href="/HTML/Tema 1/Ejercicio2.xml">Ejercicio 2</a>
+                    <li><a target="_blank" href="/HTML/Tema 1//XML/Ejercicio1.xml">Ejercicio 1</a>
+                    <li><a target="_blank" href="/HTML/Tema 1//XML/Ejercicio2.xml">Ejercicio 2</a>
                 </ul>
         <br>
         </div>
