--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
         <meta name="author" content="Vicente">
         <meta charset="UTF-8">
     </head>
-    <body aling="center">
-        <h2 aling="center"><font color="#fa842f">Ejemplo de index.html</font></h2>
+    <body>
+        <h2><font color="#fa842f">Ejemplo de index.html</font></h2>
         <br>
-        <h1 aling="center"><font color="#fa842f">Vicente Peinado Alcedo</font></h1>
+        <h1><font color="#fa842f">Vicente Peinado Alcedo</font></h1>
         <h3>Lenguaje de Marcas 1 DAW</h3>
         <br>
         <br>
-        <div aling="center">
-            <h3 aling="center"><font color="blue"><u>Tema 1: Introducción al lenguaje de marcas</u></font></h3>
+        <div>
+            <h3><font color="blue"><u>Tema 1: Introducción al lenguaje de marcas</u></font></h3>
                 <ul>
                     <li><a target="_blank" href="/HTML/Tema 1//XML/Ejercicio1.xml">Ejercicio 1</a>
                     <li><a target="_blank" href="/HTML/Tema 1//XML/Ejercicio2.xml">Ejercicio 2</a>
                 </ul>
         <br>
         </div>
-        <div aling="center">
-            <h3 aling="center"><font color="blue"><u>Tema 2: HTML</u></font></h3>
+        <div>
+            <h3><font color="blue"><u>Tema 2: HTML</u></font></h3>
                 <ul> 
                     <li><a target="_blank" href="/HTML/Tema 2/EjemploListas.html">Ejercicio Listas</a>
                     <li><a target="_blank" href="/HTML/Tema 2/EjemploHorario.html">Ejercicio Horario</a>
                 </ul>
         </div>
     </body>
-</title>
 </html>
