--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br>
         <br>
         <div>
-            <h3><font color="blue"><u>Tema 1: Introducción al lenguaje de marcas</u></font></h3>
+            <h3><font color="#0e9003"><u>Tema 1: Introducción al lenguaje de marcas</u></font></h3>
                 <ul>
                     <li><a target="_blank" href="/HTML/Tema 1//XML/Ejercicio1.xml">Ejercicio 1</a>
                     <li><a target="_blank" href="/HTML/Tema 1//XML/Ejercicio2.xml">Ejercicio 2</a>
@@ -22,7 +22,7 @@
         <br>
         </div>
         <div>
-            <h3><font color="blue"><u>Tema 2: HTML</u></font></h3>
+            <h3><font color="#0e9003"><u>Tema 2: HTML</u></font></h3>
                 <ul> 
                     <li><a target="_blank" href="/HTML/Tema 2/EjemploListas.html">Ejercicio Listas</a>
                     <li><a target="_blank" href="/HTML/Tema 2/EjemploHorario.html">Ejercicio Horario</a>
