--- a/Tema 2/EjemploHorario.html
+++ b/Tema 2/EjemploHorario.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//ES"
 "http://www.w3.org/TR/htm14/100se.dtd">
-<table border=1>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<table border=1 align="center" width="40%"  height=350px valign="middle">
     <tr><th>Lunes</td><th>Martes</th><th>Miercoles</th><th>Jueves</th><th>Viernes</th></tr>
     <tr><td bgcolor=#5df6f6>ENDES</td><td bgcolor=#ff5932>ING</td><td bgcolor=#3174ff>LMSGI</td><td bgcolor=#53bd85>SIINF</td><td bgcolor=#a8f9ce>SAS</td></tr>
     <tr><td bgcolor=#eaa8f9>PROGR</td><td bgcolor=#ff90dd>DAS</td><td bgcolor=#5df6f6>ENDES</td><td bgcolor=#5df6f6>ENDES</td><td bgcolor=#cd8d62>IPE</td></tr>
