--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <ul> 
                     <li><a target="_blank" href="/HTML/Tema 2/EjemploListas.html">Ejercicio Listas</a>
                     <li><a target="_blank" href="/HTML/Tema 2/EjemploHorario.html">Ejercicio Horario</a>
+                    <li><a target="_blank" href="/HTML/Team 2/iframe.html">Ejercicio Iframe</li>
                 </ul>
         </div>
     </body>
