--- a/Tema 2/iframe.html
+++ b/Tema 2/iframe.html
@@ -1,11 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//ES" "http://www.w3.org/TR/html4/loose.dtd">
-<html
+<!DOCTYPE html>
+<html>
 <head>
     <title>iframe</title>
 </head>
-<body>
-    <iframe width="500" height="250" scr="https://www.estadiodeportivo.com/" frameborder="1" scrolling="yes" id="frame1">frame 1</iframe>
-    <br>
-    <iframe width="500" height="350" scr="https://www.estadiodeportivo.com/" frameborder="2" scrolling="no" id="frame2">frame 2</iframe>
+<body style="background-color:#C70039;">
+Frame 1
+    <iframe width="300" height="250" src="https://entradas.sevillafc.es/?utm_source=sevillafc.es&utm_medium=webprincipal&utm_content=menu&utm_term=grafico&utm_campaign=portal_entradas" frameborder="1" scrolling="yes" id="frame1"></iframe>
+Frame 2
+    <iframe width="500" height="350" src="https://entradas.sevillafc.es/?utm_source=sevillafc.es&utm_medium=webprincipal&utm_content=menu&utm_term=grafico&utm_campaign=portal_entradas" frameborder="2" scrolling="no" id="frame2"></iframe>
 </body>
 </html>
