--- a/index.html
+++ b/index.html
@@ -1,33 +1,75 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//ES"
-"http://www.w3.org/TR/htm14/100se.dtd">
-<html>
-    <head>
-        <title>Ejercicio de Indice</title>
-        <meta name="author" content="Vicente">
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <h2><font color="#fa842f">Ejemplo de index.html</font></h2>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Vicente">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejercicio de Índice</title>
+    <style>
+        h1{
+            color: #D50000; 
+            font-family: Tahoma, sans-serif;
+            font-size: 30px;
+            text-align: center;
+            position: relative;
+            margin: 0;
+            
+        }
+        h2{
+            color: #C00000; 
+            font-family: Tahoma, sans-serif;
+            font-size: 20px;
+            text-align: center;
+        }
+        h3{
+            color: #D50000;
+            font-family: Tahoma, sans-serif;
+            font-size: 20px;
+            text-align: center;
+        }
+        div{
+            border: 2px solid #D50000;
+            background: #FFFFFF;
+            transition: transform 0.5s ease-in-out, background 0.5s ease-in-out;
+            max-width: 500px;
+            margin: auto;
+        }
+        div:hover {
+        transform: scale(1.1);
+        background: #FDEDEC;
+        }  
+
+        li{
+            color: #D50000; 
+            font-family: Tahoma, sans-serif;
+            font-size: 20px;
+            text-align: left;
+        }
+        body {
+            background-color: #E6E6E6; 
+            padding-top: 0px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Vicente Peinado</h1>
+    <h3>Lenguaje de Marcas 1 DAW</h3>
         <br>
-        <h1><font color="#fa842f">Vicente Peinado Alcedo</font></h1>
-        <h3>Lenguaje de Marcas 1 DAW</h3>
-        <br>
-        <br>
+    <h2>Tema 1: Introducción al lenguaje de marcas</h2>
         <div>
-            <h3><font color="#0e9003"><i>Tema 1: Introducción al lenguaje de marcas</i></font></h3>
-                <ul>
-                    <li><a target="_blank" href="/HTML/Tema 1//XML/Ejercicio1.xml">Ejercicio 1</a>
-                    <li><a target="_blank" href="/HTML/Tema 1//XML/Ejercicio2.xml">Ejercicio 2</a>
-                </ul>
-        <br>
+            <ul>
+                <li><a href="/HTML/Tema 1//XML/Ejercicio1.xml" target="_blank">Ejercicio 1</a></li>
+                <li><a href="/HTML/Tema 1//XML/Ejercicio2.xml" target="_blank">Ejercicio 2</a></li>
+            </ul>
         </div>
+        <br><br>
+    <h2>Tema 2: HTML</h2>
         <div>
-            <h3><font color="#0e9003"><i>Tema 2: HTML</i></font></h3>
-                <ul> 
-                    <li><a target="_blank" href="/HTML/Tema 2/EjemploListas.html">Ejercicio Listas</a>
-                    <li><a target="_blank" href="/HTML/Tema 2/EjemploHorario.html">Ejercicio Horario</a>
-                    <li><a target="_blank" href="/HTML/Tema 2/iframe.html">Ejercicio Iframe</a>
-                </ul>
+            <ul>
+                <li><a href="/HTML/Tema 2/EjemploListas.html" target="_blank">Ejercicio Listas</a></li>
+                <li><a href="/HTML/Tema 2/EjemploHorario.html" target="_blank">Ejercicio Horario</a></li>
+                <li><a href="/HTML/Tema 2/iframe.html" target="_blank">Ejercicio Iframe</a></li>
+            </ul>
         </div>
-    </body>
+</body>
 </html>
