--- a/Tema 2/iframe.html
+++ b/Tema 2/iframe.html
@@ -3,7 +3,7 @@
 <head>
     <title>iframe</title>
 </head>
-<body style="background-color:#C70039;">
+<body style="background-color:#a16d7c;">
 Frame 1
     <iframe width="300" height="250" src="https://entradas.sevillafc.es/?utm_source=sevillafc.es&utm_medium=webprincipal&utm_content=menu&utm_term=grafico&utm_campaign=portal_entradas" frameborder="1" scrolling="yes" id="frame1"></iframe>
 Frame 2
