--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         }
         body {
             background-color: #E6E6E6; 
+
             padding-top: 0px;
         }
     </style>
@@ -69,6 +70,7 @@
                 <li><a href="/HTML/Tema 2/EjemploListas.html" target="_blank">Ejercicio Listas</a></li>
                 <li><a href="/HTML/Tema 2/EjemploHorario.html" target="_blank">Ejercicio Horario</a></li>
                 <li><a href="/HTML/Tema 2/iframe.html" target="_blank">Ejercicio Iframe</a></li>
+                <li><a href="/HTML/Tema 2/formulario.html" target="_blank">Ejercicio Formulario</a></li>
             </ul>
         </div>
 </body>
