--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <nav>
         <table>
-            <tr><th><a href="/HTML/index1.html" target="_self">Tema 1</a></th><th><a href="/HTML/index2.html" target="_self">Tema 2</a></th></tr>
+            <tr><th><a href="/HTML/index1.html"style="color:#D50000;text-decoration: none;">Tema 1</a></th><th><a href="/HTML/index2.html" style="color:#D50000;text-decoration: none;">Tema 2</a></th></tr>
         </table>
     </nav>
     <br><br><br><br><br>
