--- a/Tema 2/index2.html
+++ b/Tema 2/index2.html
@@ -37,8 +37,23 @@
         div:hover {
         transform: scale(1.1);
         background: #FDEDEC;
+        }
+        table{
+        display: flex;
+        justify-content: center;
         }  
-
+        th{
+        border: 2px solid #D50000;
+        background: #FFFFFF;
+        transition: transform 0.5s ease-in-out, background 0.5s ease-in-out;
+        max-width: 500px;
+        margin: auto;
+        text-decoration: none;
+        }
+        th:hover {
+        transform: scale(1.1);
+        background: #FDEDEC;
+        }  
         li{
             color: #D50000; 
             font-family: Tahoma, sans-serif;
@@ -47,9 +62,12 @@
         }
         body {
             background-color: #E6E6E6; 
-
             padding-top: 0px;
         }
+        footer{
+        text-align: center;
+        }
+    </style>
     </style>
 </head>
 <body>
