--- a/Tema 1/XML/index1.html
+++ b/Tema 1/XML/index1.html
@@ -76,7 +76,7 @@
     </header>
     <nav>
         <table>
-            <tr><th><a href="/HTML/Tema 1/XML/index1.html" target="_self" style="color:#D50000;text-decoration: none;">Tema 1</a></th><th><a href="/HTML/Tema 2/index2.html" target="_self" style="color:#D50000;text-decoration: none;">Tema 2</a></th></tr> 
+            <tr><th><a href="/HTML/index.html" style="color:#D50000;text-decoration: none;">Inicio</a></th><th><a href="/HTML/Tema 1/XML/index1.html" target="_self" style="color:#D50000;text-decoration: none;">Tema 1</a></th><th><a href="/HTML/Tema 2/index2.html" target="_self" style="color:#D50000;text-decoration: none;">Tema 2</a></th></tr> 
         </table>
     </nav>
     <main>
