--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Vicente">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio de Índice</title>
+    <title>Inicio</title>
 </head>
 <style>
     h1{
