--- a/Tema 2/index2.html
+++ b/Tema 2/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Vicente">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio de Índice</title>
+    <title>Tema 2</title>
     <style>
         h1{
             color: #D50000; 
