--- a/Tema 2/index2.html
+++ b/Tema 2/index2.html
@@ -90,6 +90,7 @@
                 <li><a href="/HTML/Tema 2/EjemploHorario.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Horario</a></li>
                 <li><a href="/HTML/Tema 2/iframe.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Iframe</a></li>
                 <li><a href="/HTML/Tema 2/formulario.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Formulario</a></li>
+                <li><a href="/HTML/Tema 2/Curriculum.html" style="color:#D50000;text-decoration: none;" target="_blank">Curriculum</a></li>
             </ul>
         </div>
     </main>
@@ -99,3 +100,4 @@
     </footer>
 </body>
 </html>
+
