--- a/Tema 2/Curriculum.html
+++ b/Tema 2/Curriculum.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="photo">
-                <img src="G:\1ºDAW\Lenguaje\Lenguaje de Casa\Tema 2\copiaweb.png" alt="Foto">
+                <img src="/HTML/Tema 2/copiaweb.png" alt="Foto">
             </div>
             <h1>Vicente Peinado</h1>
             <p class="job">Desarrollador Web</p>
