--- a/Tema 2/index2.html
+++ b/Tema 2/index2.html
@@ -66,8 +66,10 @@
         }
         footer{
         text-align: center;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center; 
         }
-    </style>
     </style>
 </head>
 <body>
@@ -94,10 +96,8 @@
             </ul>
         </div>
     </main>
-    <br><br><br><br><br><br><br>
     <footer>
         <p><em>Copyright 2024 Vicente Peinado</em></p>
     </footer>
 </body>
 </html>
-
