--- a/Tema 1/XML/index1.html
+++ b/Tema 1/XML/index1.html
@@ -66,6 +66,9 @@
         }
         footer{
         text-align: center;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center; 
         }
     </style>
 </head>
@@ -89,7 +92,6 @@
             </ul>
         </div>
     <main>
-    <br><br><br><br><br><br><br>
     <footer>
         <p><em>Copyright 2024 Vicente Peinado</em></p>
     </footer>
