--- a/Tema 2/Curriculum.html
+++ b/Tema 2/Curriculum.html
@@ -4,7 +4,7 @@
         <title>Curriculum</title>
         <meta charset="UTF-8">
         <meta author="Vicente Peinado">
-        <link rel="cv" href="cv-style.css">
+        <link rel="stylesheet" type="text/css" href="cv-style.css">
     </head>
     <body>
         <header>
