--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     }
     footer{
         text-align: center;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center; 
     }
 </style>
 <body>
@@ -70,7 +73,6 @@
     <main>
         <image src="https://die.mep.go.cr/sites/all/files/enconstruccion_4.gif" alt="imagen" width="800" height="400"></image>
     </main>
-    <br><br><br><br><br><br><br>
     <footer>
         <p><em>Copyright 2024 Vicente Peinado</em></p>
     </footer>
