--- a/Tema 2/index2.html
+++ b/Tema 2/index2.html
@@ -94,6 +94,7 @@
                 <li><a href="/HTML/Tema 2/formulario.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Formulario</a></li>
                 <li><a href="/HTML/Tema 2/Curriculum.html" style="color:#D50000;text-decoration: none;" target="_blank">Curriculum</a></li>
                 <li><a href="/HTML/Tema 2/cvformal.html" style="color:#D50000;text-decoration: none;" target="_blank">Curriculum Profesional</a></li>
+                <li><a href="/HTML/Tema 2/cvempresa.html" style="color:#D50000;text-decoration: none;" target="_blank">Curriculum Profesional</a></li>
             </ul>
         </div>
     </main>
