--- a/Tema 2/cvformalempresa.html
+++ b/Tema 2/cvformalempresa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Curriculum Vitae</title>
     <meta author="Vicente Peinado">
-    <link rel="stylesheet" type="text/css" href="cvformalstyle.css">
+    <link rel="stylesheet" type="text/css" href="cvempresa.css">
 </head>
 <body>
     <div id="cv">
