--- a/Tema 2/cvformalempresa.html
+++ b/Tema 2/cvformalempresa.html
@@ -78,35 +78,6 @@
                             <p>El Puerto de Santa María</p>
                     </div>
                 </div>
-                <div id="experiencia">
-                    <div id="title1">
-                        <div id="title-img">
-                            <img src="trabajo.png" alt="foto">
-                        </div>
-                            <h4>Experiencia Laboral</h4>
-                    </div>
-                        <div id="rellenoExp">
-                            <h5>VISTAHERMOSA CLUB DE GOLF</h5>
-                            <p>Peón de mantenimiento y dependiente. Mayo-Septiembre 2024</p>
-                            <p>Peón de mantenimiento. Marzo-Abril 2024</p>
-                            <p>Peón de mantenimiento. Junio-Octubre 2023</p>
-                            <p>Peón de mantenimiento. Abril-Mayo 2023</p>
-                            <p>Dependiente.Febrero 2023</p>
-                            <p>Dependiente.Enero 2023</p>
-                            <p>Peón de mantenimiento. Mayo-Octubre 2022</p>
-                            <p>Peón de mantenimiento. Enero 2022</p>
-                            <p>Peón de mantenimiento. Marzo-Septiembre 2021</p>
-                            <p>Dependiente.Junio-Septiembre 2020</p>
-                            <p>Peón de mantenimiento. Octubre-Diciembre 2019</p>
-                            <p>Peón de mantenimiento. Julio-Septiembre 2019</p>
-                            <p>Peón de mantenimiento y dependiente. Julio-Septiembre 2018</p>
-                            <p>Peón de mantenimiento. Julio-Septiembre 2017</p>
-                            <h5>IEDES Energías S.L.U.</h5>
-                            <p>Técnico en averías. Realizando mantenimientos en equipos solares, reparaciones de centralitas. Abril-Junio 2016</p>
-                            <h5>GRUPO TORRENT</h5>
-                            <p>Peón de mantenimiento. Realizando tareas de mantenimiento. Marzo-Junio 2012</p>
-                        </div>
-                </div>
                 <div id="formacion">
                     <div id="title1">
                         <div>
@@ -118,14 +89,13 @@
                     </div>
                     <div id="rellenoFormacion">
                         <h5>Estudios principales</h5>
-                        <p>Desarrollo y Aplicaciones Web (2026)</p>
-                        <p>Gestión Administrativa (2020)</p>
-                        <p>Sistemas de Telecomunicaciones e Informáticos (2016)</p>
-                        <p>Equipos Electrónicos de Consumo  (2012)</p>
+                        <h3>Desarrollo y Aplicaciones Web (Actualmente)</h3>
+                        <p>Lenguajes de programación: Java, HTML, CSS, SQL.</p>
+                        <p>Maquinas virtuales, montaje de pc, configuración, administración</p>
+                        <h4>Sistemas de Telecomunicaciones e Informáticos (2016)</h4>
                     </div>
                     <div id="rellenoComplentaria">
                         <h5>Formación complementaria</h5>
-                        <p>Conocimientos medio en aplicaciones informáticas Microsoft Office: Word, Excel, PowerPoint y Access</p>
                         <p>Certificado CCNA 1 de CISCO: Network Fundamentals</p>
                         <p>Certificado CCNA 2 de CISCO: Routing Protocols and Concepts</p>
                         <p>Certificado CCNA 3 de CISCO: LAN Switching and Wireless</p>
