--- a/Tema 3/bootstrap/practica2.html
+++ b/Tema 3/bootstrap/practica2.html
@@ -1,32 +1,44 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ejemplo Base con Bootstrap</title>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 <div class="container">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card">
-          <img src="https://cdn.pixabay.com/photo/2022/09/20/22/58/sand-7468945_640.jpg" class="card-img-top"
-            alt="Imagen 1">
-          <div class="card-body">
-            <h5 class="card-title">Imagen 1</h5>
-            <p class="card-text">Descripción de la imagen 1.</p>
+    <div class="row row-cols-1 row-cols-md-3 g-4">    <!-- Sistema Grid: Fila con columnas responsive -->
+    <!--row-cols-1 = 1 columna en móvil (vertical) row-cols-md-3 = 3 columnas en pantallas ≥768px g-4 = gutter (espacio entre columnas) de 1.5rem-->
+      <div class="col"><!-- .col = columna flexible -->
+        <div class="card"><!-- .card = contenedor tipo tarjeta -->
+          <img src="https://cdn.pixabay.com/photo/2022/09/20/22/58/sand-7468945_640.jpg" class="card-img-top" alt="Imagen 1">>
+          <!--.card-img-top = imagen superior con bordes redondeados Bootstrap ajusta automáticamente la imagen al ancho de la card-->
+          <div class="card-body"><!-- .card-body = área de contenido -->
+            <h5 class="card-title">Imagen 1</h5><!-- .card-title = estilo específico -->
+            <p class="card-text">Descripción de la imagen 1.</p><!-- .card-text = texto especializado -->
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <img src="https://cdn.pixabay.com/photo/2018/06/22/08/24/emotions-3490223_1280.jpg" class="card-img-top"
-            alt="Imagen 2">
-          <div class="card-body">
-            <h5 class="card-title">Imagen 2</h5>
-            <p class="card-text">Descripción de la imagen 2.</p>
+      <div class="col"><!-- .col = columna flexible -->
+        <div class="card"><!-- .card = contenedor tipo tarjeta -->
+          <img src="https://cdn.pixabay.com/photo/2018/06/22/08/24/emotions-3490223_1280.jpg" class="card-img-top"alt="Imagen 2">
+          <!--.card-img-top = imagen superior con bordes redondeados Bootstrap ajusta automáticamente la imagen al ancho de la card-->
+          <div class="card-body"><!-- .card-body = área de contenido -->
+            <h5 class="card-title">Imagen 2</h5><!-- .card-title = estilo específico -->
+            <p class="card-text">Descripción de la imagen 2.</p><!-- .card-text = texto especializado -->
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <img src="https://cdn.pixabay.com/photo/2023/06/19/18/02/lavender-8075280_640.jpg" class="card-img-top"
-            alt="Imagen 3">
-          <div class="card-body">
-            <h5 class="card-title">Imagen 3</h5>
-            <p class="card-text">Descripción de la imagen 3.</p>
+      <div class="col"><!-- .col = columna flexible -->
+        <div class="card"><!-- .card = contenedor tipo tarjeta -->
+          <img src="https://cdn.pixabay.com/photo/2023/06/19/18/02/lavender-8075280_640.jpg" class="card-img-top" alt="Imagen 3">
+          <!--.card-img-top = imagen superior con bordes redondeados Bootstrap ajusta automáticamente la imagen al ancho de la card-->
+          <div class="card-body"><!-- .card-body = área de contenido -->
+            <h5 class="card-title">Imagen 3</h5><!-- .card-title = estilo específico -->
+            <p class="card-text">Descripción de la imagen 3.</p><!-- .card-text = texto especializado -->
           </div>
         </div>
       </div>
