--- a/Tema 3/Index3.html
+++ b/Tema 3/Index3.html
@@ -88,8 +88,8 @@
     <h2>Tema 3: CSS</h2>
         <div>
             <ul>
-                <li><a href="/HTML/Tema 3/practica1.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Bootstrap</a></li>
-                <li><a href="/HTML/Tema 3/practica2.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Bootstrap comentado</a></li>
+                <li><a href="/HTML/Tema 3/bootstrap/practica1.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Bootstrap</a></li>
+                <li><a href="/HTML/Tema 3/bootstrap/practica2.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Bootstrap comentado</a></li>
 
             </ul>
         </div>
