--- a/Tema 3/bootstrap/practica2.html
+++ b/Tema 3/bootstrap/practica2.html
@@ -14,7 +14,7 @@
     <!--row-cols-1 = 1 columna en móvil (vertical) row-cols-md-3 = 3 columnas en pantallas ≥768px g-4 = gutter (espacio entre columnas) de 1.5rem-->
       <div class="col"><!-- .col = columna flexible -->
         <div class="card"><!-- .card = contenedor tipo tarjeta -->
-          <img src="https://cdn.pixabay.com/photo/2022/09/20/22/58/sand-7468945_640.jpg" class="card-img-top" alt="Imagen 1">>
+          <img src="https://cdn.pixabay.com/photo/2022/09/20/22/58/sand-7468945_640.jpg" class="card-img-top" alt="Imagen 1">
           <!--.card-img-top = imagen superior con bordes redondeados Bootstrap ajusta automáticamente la imagen al ancho de la card-->
           <div class="card-body"><!-- .card-body = área de contenido -->
             <h5 class="card-title">Imagen 1</h5><!-- .card-title = estilo específico -->
