--- a/Tema 4/Index4.html
+++ b/Tema 4/Index4.html
@@ -84,7 +84,7 @@
             <tr><th><a href="/HTML/index.html" style="color:#D50000;text-decoration: none;">Inicio</a></th>
               <th><a href="/HTML/Tema 1/XML/index1.html" style="color:#D50000;text-decoration: none;">Tema 1</a></th>
               <th><a href="/HTML/Tema 2/index2.html" style="color:#D50000;text-decoration: none;">Tema 2</a></th>
-              <th><a href="/HTML/Tema 3/index3.html" style="color:#D50000;text-decoration: none;">Tema 3</a></th>
+              <th><a href="/HTML/Tema 3/Index3.html" style="color:#D50000;text-decoration: none;">Tema 3</a></th>
             </tr> 
         </table>
     </nav>
