--- a/Tema 3/Index3.html
+++ b/Tema 3/Index3.html
@@ -80,7 +80,11 @@
         <br>
     <nav>
         <table>
-            <tr><th><a href="/HTML/index.html" style="color:#D50000;text-decoration: none;">Inicio</a></th><th><a href="/HTML/Tema 1/XML/index1.html" style="color:#D50000;text-decoration: none;">Tema 1</a></th><th><a href="/HTML/Tema 2/index2.html" style="color:#D50000;text-decoration: none;">Tema 2</a></th></tr> 
+            <tr><th><a href="/HTML/index.html" style="color:#D50000;text-decoration: none;">Inicio</a></th>
+                <th><a href="/HTML/Tema 1/XML/index1.html" style="color:#D50000;text-decoration: none;">Tema 1</a></th>
+                <th><a href="/HTML/Tema 2/index2.html" style="color:#D50000;text-decoration: none;">Tema 2</a></th>
+                <th><a href="/HTML/Tema 4/Index4.html" style="color:#D50000;text-decoration: none;">Tema 4</a></th>
+            </tr> 
         </table>
     </nav>
     <br>
