--- a/Tema 4/Index4.html
+++ b/Tema 4/Index4.html
@@ -90,7 +90,7 @@
     </nav>
     <br>
     <main>
-    <h2>Tema 3: CSS</h2>
+    <h2>Tema 4: JavaScript</h2>
         <div>
             <ul>
                 <li><a href="/HTML/Tema 4/JavaScript/javascript4.1.html" style="color:#D50000;text-decoration: none;" target="_blank">Ejercicio Sumatorio</a></li>
