--- a/Tema 2/cvformalempresa.html
+++ b/Tema 2/cvformalempresa.html
@@ -90,7 +90,7 @@
                     <div id="rellenoFormacion">
                         <h5>Estudios principales</h5>
                         <h3>Desarrollo y Aplicaciones Web (Actualmente)</h3>
-                        <p>Lenguajes de programación: Java, HTML, CSS, SQL.</p>
+                        <p>Lenguajes de programación: Java, HTML (Bootstrap), CSS, SQL, JavaScript.</p>
                         <p>Maquinas virtuales, montaje de pc, configuración, administración</p>
                         <h4>Sistemas de Telecomunicaciones e Informáticos (2016)</h4>
                     </div>
