--- a/Tema 4/Index4.html
+++ b/Tema 4/Index4.html
@@ -99,9 +99,9 @@
                 <li><a href="/HTML/Tema 4/JavaScript/ejer2-1.html" style="color:#D50000;text-decoration: none;" target="_blank">Jquery2</a></li>
                 <li><a href="/HTML/Tema 4/JavaScript/calculadorajs.html" style="color:#D50000;text-decoration: none;" target="_blank">Calculadora</a></li>
                 <li><a href="/HTML/Tema 4/JavaScript/formulario.html" style="color:#D50000;text-decoration: none;" target="_blank">Formulario</a></li>
-                <li><a href="/HTML/Tema 4/JavaScript/Ej1Json.json" style="color:#D50000;text-decoration: none;" target="_blank">XML a JSON</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/Ej1json.json" style="color:#D50000;text-decoration: none;" target="_blank">XML a JSON</a></li>
                 <li><a href="/HTML/Tema 4/JavaScript/Ej2Json.json" style="color:#D50000;text-decoration: none;" target="_blank">Base de datos JSON</a></li>
-                <li><a href="/HTML/Tema 4/JavaScript/impirimirJSON.html" style="color:#D50000;text-decoration: none;" target="_blank"></a>Imprimir JSON</li>
+                <li><a href="/HTML/Tema 4/JavaScript/impirimirJSON.html" style="color:#D50000;text-decoration: none;" target="_blank">Imprimir JSON</a></li>
             </ul>
         </div>
     </main>
