--- a/index.html
+++ b/index.html
@@ -4,79 +4,91 @@
     <meta charset="UTF-8">
     <meta name="author" content="Vicente">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <link rel="stylesheet" type="text/css" href="indexstyle.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="indexscript.js"></script>
+    <title>Mi web</title>
 </head>
-<style>
-    h1{
-        color: #D50000; 
-        font-family: Tahoma, sans-serif;
-        font-size: 30px;
-        text-align: center;
-        position: relative;
-        margin: 0;
-        
-    }
-    h2{
-        color: #C00000; 
-        font-family: Tahoma, sans-serif;
-        font-size: 20px;
-        text-align: center;
-    }
-    h3{
-        color: #D50000;
-        font-family: Tahoma, sans-serif;
-        font-size: 20px;
-        text-align: center;
-    }
-    table{
-        display: flex;
-        justify-content: center;
-    }
-    main{
-        display: flex;
-        justify-content: center;
-    }
-    th{
-        border: 2px solid #D50000;
-        background: #FFFFFF;
-        transition: transform 0.5s ease-in-out, background 0.5s ease-in-out;
-        max-width: 500px;
-        margin: auto;
-        
-    }
-    th:hover {
-    transform: scale(1.1);
-    background: #FDEDEC;
-    }  
-    body {
-        background-color: #E6E6E6; 
-        padding-top: 0px;
-    }
-    footer{
-        text-align: center;
-        display: flex;
-        align-items: flex-end;
-        justify-content: center; 
-    }
-</style>
 <body>
     <header>
         <h1>Vicente Peinado</h1>
-        <h3>Lenguaje de Marcas 1 DAW</h3>
+        <h3>Lenguaje de Marcas 1º DAW</h3>
     </header>
-    <nav>
-        <table>
-            <tr><th><a href="/HTML/index.html" style="color:#D50000;text-decoration: none;">Inicio</a></th>
-                <th><a href="/HTML/Tema 1/XML/index1.html"style="color:#D50000;text-decoration: none;">Tema 1</a></th>
-                <th><a href="/HTML/Tema 2/index2.html" style="color:#D50000;text-decoration: none;">Tema 2</a></th>
-                <th><a href="/HTML/Tema 3/Index3.html" style="color:#D50000;text-decoration: none;">Tema 3</a></th>
-                <th><a href="/HTML/Tema 4/Index4.html" style="color:#D50000;text-decoration: none;">Tema 4</a></th>
-            </tr>
-        </table>
+    <nav id="menu">
+        <div class="menuTema" id="inicio">
+            <a href="#" >Inicio</a>
+        </div>
+        <div class="menuTema" id="tema1">
+            <a href="#" >Tema 1</a>
+        </div>
+        <div class="menuTema" id="tema2">
+            <a href="#" >Tema 2</a>
+        </div>
+        <div class="menuTema" id="tema3">
+            <a href="#" >Tema 3</a>
+        </div>
+        <div class="menuTema" id="tema4">
+            <a href="#">Tema 4</a>
+        </div>
     </nav>
-    <br><br><br><br><br>
     <main>
-        <image src="https://die.mep.go.cr/sites/all/files/enconstruccion_4.gif" alt="imagen" width="800" height="400"></image>
+        <!--dividir los enlaces en div para separalos en cuadrados y añadir un hover-->
+        <section  class="contenidoInicio">
+            <h2>¡Bienvenidos a mi web!</h2>
+                <div class = "ejercicios">
+                    <p>Esta es mi web, donde subo mis aprendizaje sobre lenguajes de marcas.</p>
+                    <p>Aquí encontrarás ejercicios y ejemplos de código XML, HTML, CSS,JavaScript y JSON.</p> 
+                </div>
+        </section>
+    <section class="contenido1">
+        <h2>Introducción al lenguaje de marcas</h2>
+            <div class = "ejercicios">
+                <ul class="listas">
+                    <li><a href="/HTML/Tema 1//XML/Ejercicio1.xml"target="_blank">Ejercicio 1</a></li>
+                    <li><a href="/HTML/Tema 1//XML/Ejercicio2.xml"target="_blank">Ejercicio 2</a></li>
+                </ul>
+            </div>
+    </section>
+    <section  class="contenido2">
+        <h2>HTML</h2>
+            <div class = "ejercicios">
+                <ul class="listas">
+                <li><a href="/HTML/Tema 2/EjemploListas.html" target="_blank">Ejercicio Listas</a></li>
+                <li><a href="/HTML/Tema 2/EjemploHorario.html" target="_blank">Ejercicio Horario</a></li>
+                <li><a href="/HTML/Tema 2/iframe.html" target="_blank">Ejercicio Iframe</a></li>
+                <li><a href="/HTML/Tema 2/formulario.html" target="_blank">Ejercicio Formulario</a></li>
+                <li><a href="/HTML/Tema 2/Curriculum.html" target="_blank">Curriculum</a></li>
+                <li><a href="/HTML/Tema 2/cvformal.html" target="_blank">Curriculum Profesional</a></li>
+                <li><a href="/HTML/Tema 2/calculadora.html" target="_blank">Calculadora</a></li>
+            </ul>
+            </div>
+    </section>
+    <section  class="contenido3">
+        <h2>CSS</h2>
+            <div class="ejercicios">
+                <ul class="listas">
+                    <li><a href="/HTML/Tema 3/bootstrap/practica1.html" target="_blank">Ejercicio Bootstrap</a></li>
+                    <li><a href="/HTML/Tema 3/bootstrap/practica2.html" target="_blank">Ejercicio Bootstrap comentado</a></li>
+                </ul>
+            </div>
+    </section>
+    <section  class="contenido4">
+        <h2>JavaScript</h2>
+            <div class="ejercicios">
+                <ul class="listas">
+                <li><a href="/HTML/Tema 4/JavaScript/javascript4.1.html" target="_blank">Ejercicio Sumatorio</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/javascriptApartado2.html" target="_blank">Ejercicio Par e Impar</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/ejer2.html" target="_blank">Jquery1</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/ejer2-1.html" target="_blank">Jquery2</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/calculadorajs.html" target="_blank">Calculadora</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/formulario.html" target="_blank">Formulario</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/Ej1json.json" target="_blank">XML a JSON</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/Ej2Json.json" target="_blank">Base de datos JSON</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/impirimirJSON.html" target="_blank">Imprimir JSON</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/Matricula.html" target="_blank">Matrícula</a></li>
+           </ul>
+            </div>
+    </section>
     </main>
     <footer>
         <p><em>Copyright 2024 Vicente Peinado</em></p>
