--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <li><a href="/HTML/Tema 4/JavaScript/Ej2Json.json" target="_blank">Base de datos JSON</a></li>
                 <li><a href="/HTML/Tema 4/JavaScript/impirimirJSON.html" target="_blank">Imprimir JSON</a></li>
                 <li><a href="/HTML/Tema 4/JavaScript/Matricula.html" target="_blank">Matrícula</a></li>
-                <li><a href="/HTML/Tema 4/JavaScript/NotaExamen.html" target="_blank">Matrícula</a></li>
+                <li><a href="/HTML/Tema 4/JavaScript/NotaExamen.html" target="_blank">Nota Examen</a></li>
            </ul>
             </div>
     </section>
